# simple_sockets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Client.cpp  Client.h  Logger.cpp  Logger.h  Server.cpp  Server.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h  Utility.cpp  Utility.h  main_client.cpp  main_server.cpp
